--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </section>
         <!-- CONTACT SECTION DESIGN -->
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <h2 class="heading">Contact <span>Me!</span></h2>
 
             <form action="#">
